@@ -1141,9 +1141,14 @@ function RefreshLights()
 									img='<img src="images/smoke48off.png" title="' + $.i18n("Turn Alarm On") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48">';
 								}
 						}
-            else if (item.Type == "Security") {
+						else if (item.Type == "Security") {
 							if (item.SubType.indexOf('remote') > 0) {
-								img='<img src="images/remote48.png" height="48">';
+								if (item.Status.indexOf('Arm') >= 0) {
+									img+='<img src="images/remote48.png" title="' + $.i18n("Turn Alarm Off") + '" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48">\n';
+								}
+								else {
+									img+='<img src="images/remote48.png" title="' + $.i18n("Turn Alarm On") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48">\n';
+								}
 							}
 							else {
 									if ((item.Status.indexOf('Alarm') >= 0)||(item.Status.indexOf('Tamper') >= 0)) {
@@ -1364,7 +1369,12 @@ function ShowLights()
 			}
 					else if (item.Type == "Security") {
 						if (item.SubType.indexOf('remote') > 0) {
-							xhtm+='\t      <td id="img"><img src="images/remote48.png" height="48"></td>\n';
+							if (item.Status.indexOf('Arm') >= 0) {
+								xhtm+='\t      <td id="img"><img src="images/remote48.png" title="' + $.i18n("Turn Alarm Off") + '" onclick="SwitchLight(' + item.idx + ',\'Off\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48"></td>\n';
+							}
+							else {
+								xhtm+='\t      <td id="img"><img src="images/remote48.png" title="' + $.i18n("Turn Alarm On") + '" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48"></td>\n';
+							}
 						}
 						else {
 							if ((item.Status.indexOf('Alarm') >= 0)||(item.Status.indexOf('Tamper') >= 0)) {
